<resources>
    <string name="app_name">Stock Ticker Symbol Checker</string>
    <string name="main_textview_title">Stock Checker</string>
    <string name="main_textView_description">Enter a ticker symbol: </string>
    <string name="main_button_submit">Submit</string>
    <string name="main_edittext_hint">eg. MSFT</string>
    <string name="main_textview_symbol">Symbol: </string>
    <string name="main_textview_companyname">Company: </string>
    <string name="main_textview_currentprice">Current Price: </string>
    <string name="main_textview_peratio">P/E Ratio: </string>
    <string name="main_textview_52weekhigh">52 Week High: </string>
    <string name="main_textview_52weeklow">52 Week Low: </string>

</resources>
